Add OpenAPI documentation
